add -fno-ipa-pure-const to CFLAGS

--- a/Compiler/boot/Makefile.omdev.mingw
+++ b/Compiler/boot/Makefile.omdev.mingw
@@ -6,7 +6,7 @@ endif
 
 CC=gcc
 CXX=g++
-CFLAGS =-g -O2 -falign-functions -fno-ipa-pure-const
+override CFLAGS += -fno-ipa-pure-const
 TOP_DIR=../../
 OMHOME=$(OMBUILDDIR)
 LDFLAGS=-L./ -lomparse -lomcruntime -L"$(OMHOME)/lib/omc" \
