more fixes for mingw64 adaptation

--- a/SimulationRuntime/cpp/Makefile.omdev.mingw
+++ b/SimulationRuntime/cpp/Makefile.omdev.mingw
@@ -24,7 +24,13 @@ ifeq ($(BUILDTYPE),)
 BUILDTYPE=Debug
 endif
 
-
+ifeq (MINGW32,$(findstring MINGW32,$(shell uname)))
+	IS_MINGW32 = -DIS_MINGW32=ON
+	IS_MINGW64 = -DIS_MINGW64=OFF
+else
+	IS_MINGW32 = -DIS_MINGW32=OFF
+	IS_MINGW64 = -DIS_MINGW64=ON
+endif
 
 BOOST_STATIC_LINKING="false"
 ifeq ("$(BOOST_STATIC_LINKING)","true")
@@ -117,7 +123,7 @@ endif
 runtimeCpp:
 	mkdir -p Build
 	cd ./Build; echo "change to Build";	\
-	$(CMAKE) -G "MSYS Makefiles" -DCMAKE_BUILD_TYPE=$(BUILDTYPE) -DCMAKE_INSTALL_PREFIX:PATH="$(OMBUILDDIR)" $(BOOST_STATIC_LINKING_COMMAND) $(BOOST_REALPATHS_COMMAND) $(RUNTIME_PROFILING_COMMAND) $(USE_SCOREP_COMMAND) $(SCOREP_HOME_COMMAND) $(FMU_SUNDIALS_COMMAND) $(PARALLEL_OUTPUT_COMMAND) $(USE_LOGGER_COMMAND) MAKE_CXX_COMPILER=g++ ../; \
+	cmake -G "MSYS Makefiles" -DCMAKE_BUILD_TYPE=$(BUILDTYPE) -DCMAKE_INSTALL_PREFIX:PATH="$(OMBUILDDIR)" $(IS_MINGW32) $(IS_MINGW64) $(BOOST_STATIC_LINKING_COMMAND) $(BOOST_REALPATHS_COMMAND) $(RUNTIME_PROFILING_COMMAND) $(USE_SCOREP_COMMAND) $(SCOREP_HOME_COMMAND) $(FMU_SUNDIALS_COMMAND) $(PARALLEL_OUTPUT_COMMAND) $(USE_LOGGER_COMMAND) MAKE_CXX_COMPILER=g++ ../; \
 	make;
 
 runtimeCPPmsvc: getMSVCversion
