- fix msvc compilation of CPP runtime

--- a/SimulationRuntime/cpp/CMakeLists.txt
+++ b/SimulationRuntime/cpp/CMakeLists.txt
@@ -294,13 +294,18 @@ ENDIF(OMC_BUILD)
 # Handle OMDEV
 #  - On windows boost,blas,lapack and sundial solvers from omdev are used else the installed versions are used
 IF(WIN32)
+  MESSAGE(STATUS "MINGW:")
+  MESSAGE(STATUS ${IS_MINGW32})
+  MESSAGE(STATUS ${IS_MINGW64})
   IF(IS_MINGW32)
-    SET(ENV{BOOST_ROOT} $ENV{OMDEV}"/mingw32/include")
+    SET(BOOST_ROOT $ENV{OMDEV}"/tools/mingw32/include")
   ELSEIF(IS_MINGW64)
-    SET(ENV{BOOST_ROOT} $ENV{OMDEV}"/mingw64/include")
-  ELSEIF(NOT(IS_MINGW32 OR IS_MINGW64))
-    SET(ENV{BOOST_ROOT} $ENV{OMDEV}"/lib/3rdParty/boost-1_55/")
+    SET(BOOST_ROOT $ENV{OMDEV}"/tools/mingw64/include")
+  ELSE()
+    SET(BOOST_ROOT $ENV{OMDEV}"/lib/3rdParty/boost-1_55/")
   ENDIF(IS_MINGW32)
+  MESSAGE(STATUS "Boost root:")
+  MESSAGE(STATUS ${BOOST_ROOT})
   SET(BLAS_blas_LIBRARY $ENV{OMDEV}/lib/3rdParty/Lapack/Lib/blas_win32.dll CACHE FILEPATH "Blas library")
   SET(LAPACK_lapack_LIBRARY  $ENV{OMDEV}/lib/3rdParty/Lapack/Lib/lapack_win32.dll CACHE FILEPATH "Lapack library")
   SET(BLAS_DIRY "$ENV{OMDEV}/lib/3rdParty/Lapack/Lib/" CACHE LOCATION "where was yarp built?")
